<resources>
    <string name="app_name">Serene</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="improvement_in">Improvement (in %)</string>
    <string name="percentage" translatable="false">%</string>
    <string name="highest_day_of_anxiety">Highest Day of Anxiety</string>
    <string name="date_here" translatable="false">(date here)</string>
    <string name="allFields">"All fields are required "</string>
    <string name="passwordMatch">"Password does not match, please try again "</string>
    <string name="nameFormat">Please enter correct name format</string>
    <string name="passwordChar">Password is less than 6 characters, please try again </string>
    <string name="emailFormat">"Please enter correct email format "</string>
    <string name="questionnaire">Please complete the questionnaire </string>
    <string name="incomeFormat">Please enter correct income format </string>
    <string name="selectPic">Select Picture </string>
    <string name="image">"Image chosen "</string>
    <string name="passwordUpdate">Password updated </string>
    <string name="passwordNotUpdated">Password is not updated, please try again </string>
    <string name="wrongPassword">you have entered a wrong password </string>
    <string name="passwordSame">You cannot use the same password </string>
    <string name="emailpassWrong">The email or password is wrong</string>
    <string name="auth">Authentication failed</string>
    <string name="emailVerify">Check email link to verify account</string>
    <string name="full">Full-time</string>
    <string name="part">Part-time</string>
    <string name="student">Student</string>
    <string name="none">Not employed</string>
    <string name="cancel">Cancel</string>
    <string name="appointments">Appointments</string>
    <string name="calendar">Calendar</string>
    <string name="medicine">Medicine</string>
    <string name="event">Appointment</string>
    <string name="logout">Logout</string>
    <string name="doctor">Doctor</string>
    <string name="social_demographic_information">Social-Demographic Information</string>
    <string name="language">Language</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="full_name">Full Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="welcome_to_serene">Welcome to Serene</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_caps">REGISTER</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="error">Error</string>
    <string name="signup">SIGNUP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="join_us">Join Us</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="gad7_description">This is a short 7 questions that measures severity of anxiety. Please read each statement and select the choice which indicates how much the statement applied to you over the past 2 weeks.</string>
    <string name="socio_description">Please fill in the form with your socio-demographic information so we can provide you more accurate results.</string>
    <string name="age">Age</string>
    <string-array name="martial_status">
        <item>@string/single</item>
        <item>@string/married</item>
        <item>@string/widowed</item>
        <item>@string/divorced</item>

    </string-array>
    <string name="ex_diabetes">ex; Diabetes</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="sr">SR</string>
    <string name="ex_2000" translatable="false">ex; 2000</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="kg">kg</string>
    <string name="weight">Weight</string>
    <string name="ex_55" translatable="false">ex; 55</string>
    <string name="cm">cm</string>
    <string name="ex_160" translatable="false">ex; 160</string>
    <string name="height">Height</string>
    <string name="ex_21" translatable="false">ex; 21</string>
    <string name="cigarette_smoker">Cigarette Smoker</string>
    <string name="employment_status">Employment Status</string>
    <string name="gad_7_scale">GAD-7 Scale</string>
    <string name="feeling_nervous_anxious_or_on_edge">Feeling nervous, anxious, or on edge</string>
    <string name="not_being_able_to_stop_or_control_worrying">Not being able to stop or control worrying</string>
    <string name="nearly_every_day">Nearly every day</string>
    <string name="several_days">Several days</string>
    <string name="being_so_restless_that_it_s_hard_to_sit_still">Being so restless that it’s hard to sit still</string>
    <string name="becoming_easily_annoyed_or_irritable">Becoming easily annoyed or irritable</string>
    <string name="feeling_afraid_as_if_something_awful_might_happen">Feeling afraid as if something awful might happen</string>
    <string name="trouble_relaxing">Trouble relaxing</string>
    <string name="worrying_too_much_about_different_things">Worrying too much about different things</string>
    <string name="not_at_nall_sure">Not at all sure</string>
    <string name="over_half_nthe_days">Over half the days</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="next_appointment">Next Appointment</string>
    <string name="improvement">Improvement</string>
    <string name="throughout_the_week">(Throughout the week)</string>
    <string name="anxiety_level">Anxiety Level</string>
    <string name="connect_to_fitbit">Connect to Fitbit</string>
    <string name="fitbit_desc">Serene wants to connect with your Fitbit account in order to acccess your data and behave correctly.</string>
    <string name="finish">Finish</string>
    <string name="demographic_information">Demographic Information</string>
    <string name="google_calendar">Google Calendar</string>
    <string name="connect_google_calendar">Connect Google Calendar</string>
    <string name="status_not_connected">Status: Not Connected</string>
    <string name="audio_recorded_successfully">Audio recorded successfully!</string>
    <string name="generate_report">Generate Report</string>
    <string name="duration">Duration:</string>
    <string name="last_two_weeks">Last Two Weeks</string>
    <string name="last_month">Last Month</string>
    <string name="specific_period">Specific Period</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="not_at_all">Not at all</string>
    <string name="delete">delete</string>
    <string name="google_calendar_description">Serene wants to connect with your google calendar to get your events in order to perform correctly.</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="alert">Your email has not been verified.</string>
    <string name="empty">There are no upcoming appointments</string>
    <string name="tips">Quote of the day</string>
    <string name="minute">minute(s)</string>
    <string name="hour">hour(s)</string>
    <string name="day">day(s)</string>
    <string name="week">week(s)</string>
    <string name="resend_verification_email"><u>Resend Verification Email</u></string>
    <string name="steps_rcmnd">It is recommended to walk at least 3000 steps per day to get lower chance of anxiety.\nKeep in mind that active people have lower rates of anxiety than sedentary people.</string>
    <string name="sleep_rcmnd">It is recommended to sleep at least 8 hours per day to get lower chance of anxiety.\nGetting a good night’s sleep can improve your mental well-being and help you to better manage your anxiety.</string>
    <string name="g_sleep"><b>Good News!</b> \nIt seems you\'re getting enough sleep!\nGetting a good night’s sleep can improve your mental well-being and help you to better manage your anxiety.</string>
    <string name="g_steps"><b>Great Work!</b> \nYou\'re considered an active person based on your average steps per day.\nKeep in mind that active people have lower rates of anxiety than sedentary people.</string>
    <string name="date_picker">The start date must be chosen before the end.</string>
    <string name="date_pickerr">The start and end date must be chosen to generate the report.</string>
    <string name="date_pickerrr">The start date must be chosen to generate the report.</string>
    <string name="date_pickerrrr">The end date must be chosen to generate the report.</string>
    <string-array name="employmentStatus">
        <item>@string/full</item>
        <item>@string/part</item>
        <item>@string/student</item>
        <item>@string/none</item>

    </string-array>
    <string-array name="MedicineRepeatType">
        <item>@string/minute</item>
        <item>@string/hour</item>
        <item>@string/day</item>
        <item>@string/week</item>

    </string-array>
    <string-array name="yes_no">
        <item>@string/yes</item>
        <item>@string/no</item>

    </string-array>
    <string name="gender">Gender</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="widowed">Widowed</string>
    <string name="divorced">Divorced</string>
    <string name="NewTD">New Draft</string>
    <string name="TitleTD">Add Title</string>
    <string name="SubTD">What Do You Feel?</string>
    <string name="SaveTD">Save</string>
    <string name="TDSavedSuccess">The Text Draft Saved Successfully</string>
    <string name="TDSavedFialed">The Text Draft Did not Saved, Try Again</string>
    <string name="EmptyFields">All Fields Required</string>
    <string name="EditTD">Edit Draft</string>
    <string name="SaveChangesTD">Save Changes</string>
    <string name="DeleteTD">Delete Draft</string>
    <string name="DeleteMessageTD">Are you sure you want to delete this Draft ? </string>
    <string name="DeleteOKTD">Delete</string>
    <string name="DeleteCancleTD">Cancel</string>
    <string name="TDDeletedSuccess">Text Draft Deleted Successfully</string>
    <string name="TDDeletedFialed">The Text Draft Did not Deleted, Try Again</string>
    <string name="TDUpdatedSuccess">Text Draft Updated Successfully</string>
    <string name="TDUpdatedFialed">The Text Draft Did not Updated, Try Again</string>
    <string name="AddApp">New Appointment</string>
    <string name="TitleApp">Title</string>
    <string name="DayApp">Day</string>
    <string name="TimeApp">Time</string>
    <string name="SetDayApp">Set Day</string>
    <string name="SetTimeApp">Set Time</string>
    <string name="SaveApp">Confirm</string>
    <string name="CurrentTime">The chosen time must after now</string>
    <string name="AppSavedSuccess">The Appointment Reminder Saved Successfully</string>
    <string name="AppSavedFialed">The Appointment Reminder Did not Saved, Try Again</string>
    <string name="AppDetails">Appointment</string>
    <string name="DeleteApp">Delete Appointment</string>
    <string name="DeleteMessageApp">Are you sure you want to delete this Appointment Reminder ? </string>
    <string name="DeleteOKApp">Delete</string>
    <string name="DeleteCancleApp">Cancel</string>
    <string name="AppDeletedSuccess">The Appointment Reminder Deleted Successfully</string>
    <string name="AppDeletedFialed">The Appointment Reminder Did not Deleted, Try Again</string>
    <string name="SaveSocioUpdate">Save</string>
    <string name="edit_my_information">Edit My Information</string>
</resources>