<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    tools:context=".LogInPage"
    android:id="@+id/LogIn">

    <View
        android:id="@+id/white_frame"
        android:layout_width="match_parent"
        android:layout_height="545dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="147dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/white_frame" />

    <View
        android:id="@+id/serene_logo"
        android:layout_width="411dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="5dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/serene_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="380dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:textAlignment="viewStart"
        android:inputType="textEmailAddress"
        android:textColor="#B1B0B0" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:ems="10"
        android:hint="@string/password"
        android:textAlignment="viewStart"
        android:inputType="textPassword"
        android:textColor="#B1B0B0" />


    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="230dp"
        android:paddingEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/Error"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/forgetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:text="@string/error"
        android:textColor="@color/Error" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/off_button"
        android:enabled="false"
        android:fontFamily="@font/montserrat"
        android:padding="3dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/registerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/register_caps"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>