<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.main.profile.EditSocio"
    android:id="@+id/EditSocio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/upper_bar_sub"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow" />


        <TextView
            android:id="@+id/edit_Socio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"
            android:text="@string/edit_my_information"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toBottomOf="@+id/edit_Socio">-->

         <LinearLayout
             android:id="@+id/mainLayoutQs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="40dp"
             android:paddingEnd="10dp"
             android:layout_marginTop="50dp"
             app:layout_constraintTop_toBottomOf="@+id/head">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/q1"
                     android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/age"
                     android:textColor="@color/black"
                     android:textSize="18sp" />

                 <EditText
                     android:id="@+id/age"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:inputType="number" />


             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/q2"
                     android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/height"
                     android:textColor="@color/black"
                     android:textSize="18sp" />

                 <EditText
                     android:id="@+id/height"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:hint="@string/ex_160"
                     android:inputType="number" />

                 <TextView
                     android:id="@+id/e2"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/cm"
                     android:textColor="#8A000000"
                     android:textSize="18sp" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/q3"
                     android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/weight"
                     android:textColor="@color/black"
                     android:textSize="18sp" />

                 <EditText
                     android:id="@+id/weight"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:hint="@string/ex_55"
                     android:inputType="number" />

                 <TextView
                     android:id="@+id/e3"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/kg"
                     android:textColor="#8A000000"
                     android:textSize="18sp" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/q4"
                     android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/monthly_income"
                     android:textColor="@color/black"
                     android:textSize="18sp" />

                 <EditText
                     android:id="@+id/income"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:inputType="number" />

                 <TextView
                     android:id="@+id/e4"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/sr"
                     android:textColor="#8A000000"
                     android:textSize="18sp" />

             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/q8"
                     android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/chronic_diseases"
                     android:textColor="@color/black"
                     android:textSize="18sp" />


                 <EditText
                     android:id="@+id/chronic"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:hint="@string/ex_diabetes"
                     android:inputType="textPersonName" />


             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/q5"
                     android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/martial_status"
                     android:textColor="@color/black"
                     android:textSize="18sp" />


                 <Spinner
                     android:id="@+id/married"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10" />


             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/q6"
                     android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/employment_status"
                     android:textColor="@color/black"
                     android:textSize="18sp" />


                 <Spinner
                     android:id="@+id/employee"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10" />


             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:orientation="horizontal">

                 <TextView
                     android:id="@+id/q7"
                     android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
                     android:gravity="center_vertical"
                     android:text="@string/cigarette_smoker"
                     android:textColor="@color/black"
                     android:textSize="18sp" />


                 <Spinner
                     android:id="@+id/smoke"
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:ems="10" />


             </LinearLayout>


         </LinearLayout>

     <!-- </ScrollView>end main layout-->


    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/main_button"
        android:fontFamily="@font/montserrat"
        android:padding="3dp"
        android:text="@string/SaveSocioUpdate"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>